--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "openvpn"]
 	path = openvpn
-	url = https://github.com/OpenVPN/openvpn
+	url = https://github.com/openvpn/openvpn
 [submodule "pam_aad"]
 	path = pam_aad
-	url = https://github.com/CyberNinjas/pam_aad
+	url = https://github.com/aad-for-linux/pam_aad
